--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
@@ -22,7 +21,10 @@
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
+    "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
-    "supertest": "^4.0.2"
+    "nyc": "^15.0.1",
+    "supertest": "^4.0.2",
+    "chai": "^4.2.0"
   }
 }
