--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "mongoose": "^5.9.13"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "concurrently": "^5.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
-    "supertest": "^4.0.2",
-    "chai": "^4.2.0"
+    "supertest": "^4.0.2"
   }
 }
